fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
    Author:
    ========================================================================== */
 
-html{overflow:hidden;}
+html{}
 
 hr{ margin:50px 0; }
 
